--- a/index.html
+++ b/index.html
@@ -70,10 +70,7 @@
               <div id="introMessage" class="animated bounceInUp">
                   <h1>Kemptown Foodtruck</h1>
                   <h3><span>Bienvenue</span><br>
-                      { Cliquez sur le camion,
-                      puis scrollez vers le bas<br>
-                      pour en savoir plus sur nous }<br>
-                    <span id="span2">Cliquez à nouveau sur le camion pour fermer</span></h3>
+                      { Cliquez sur le camion ! }<br>
                   <img id="introMessageClose" class="closeBtn imgSwap" src="dist/img/static-x.png" data-alt-src="dist/img/animat-x.gif">
               </div>
           </div>
@@ -83,52 +80,56 @@
         <!-- ****************** THE CONTENT **************** -->
       <div id="theContent" class="theContent">
         <div class="contentBlock">
-          <p id="p1">
+                <p id="p1">
             Nous sommes Clara et Christian, et c'est au retour d'une année passée en Angleterre, à Brighton,
             que nous avons voulu faire découvrir la cuisine anglaise aux français !
+            Au volant de notre food truck, nous sillonnons les routes de la région lyonnaise pour vous proposer
+            des fish'n'chips et des burgers gourmands et généreux dont les recettes à l'accent british vous raviront.
           </p>
         </div> <!-- contentBlock -->
         <div class="contentBlock">
           <p id="p2">
-            Au volant de notre food truck, nous sillonnons les routes de la région lyonnaise pour vous proposer
-            des fish'n'chips et des burgers gourmands et généreux dont les recettes à l'accent british vous raviront.
-          </p>
-
-        </div> <!-- contentBlock -->
-        <div class="contentBlock">
-          <p id="p3">
             Nos fournisseurs sont soigneusement sélectionnés, nos produits seront toujours frais,
-            locaux et de saison, nos frites et nos sauces faites maison.
-          </p>
-
-        </div> <!-- contentBlock -->
-        <div class="contentBlock">
-          <p id="p4">
+            locaux et de saison, nos frites et nos sauces faites maison.<br>
             Bonne nouvelle pour les becs sucrés, nous avons déniché une patissière lyonnaise aux
             spécialités anglaises : carrot cake, et cheese cake sont à la carte !
           </p>
 
         </div> <!-- contentBlock -->
+        <div class="contentBlock">
+          <p id="p3">
+            Nos fish’n’chips et burgers sont fabriqués à partir d’ingrédients frais, de saison et de qualité,
+            que nous avons sélectionnés parmi les meilleurs producteurs lyonnais.
+            Notre viande provientde la boucherie« Jolivet »(CroixRousse), nos buns etpains
+            à hot dog sontfaçonnés par« le Boulanger de la Croix Rousse
+            by Victor ».<br>
+          </p>
+
+        </div> <!-- contentBlock -->
+        <div class="contentBlock">
+          <p id="p4">
+              Tous les légumes et pommes de terre sont achetés au marché de la Croix Rousse.
+              Nos exquises patisseries sont préparées par l’équipe de Piece of Cake.
+          </p>
+            <img class="closeBtn imgSwap" src="dist/img/static-x.png" data-alt-src="dist/img/animat-x.gif">
+
+        </div> <!-- contentBlock -->
 
         <div id="p5" class="contentBlock">
           <p>
-            Nos fish’n’chips et burgers sont fabriqués à partir d’ingrédients frais, de saison et de qualité,
-            que nous avons sélectionnés parmi les meilleurs producteurs lyonnais.
+
           </p>
 
         </div> <!-- contentBlock -->
         <div class="contentBlock">
           <p id="p6">
-            Notre viande provientde la boucherie« Jolivet »(CroixRousse), nos buns etpains
-            à hot dog sontfaçonnés par« le Boulanger de la Croix Rousse
-            by Victor ».
+
           </p>
 
         </div> <!-- contentBlock -->
         <div class="contentBlock">
           <p id="p7">
-            Tous les légumes et pommes de terre sont achetés au marché de la Croix Rousse.
-            Nos exquises patisseries sont préparées par l’équipe de Piece of Cake.<br>
+            <br>
           </p>
         </div> <!-- contentBlock -->
 
