work in progress

--- a/index.html
+++ b/index.html
@@ -111,27 +111,27 @@
               Tous les légumes et pommes de terre sont achetés au marché de la Croix Rousse.
               Nos exquises patisseries sont préparées par l’équipe de Piece of Cake.
           </p>
-            <img class="closeBtn imgSwap" src="dist/img/static-x.png" data-alt-src="dist/img/animat-x.gif">
+            <img id="theContentClose" class="closeBtn imgSwap" src="dist/img/static-x.png" data-alt-src="dist/img/animat-x.gif">
 
         </div> <!-- contentBlock -->
 
-        <div id="p5" class="contentBlock">
-          <p>
+        <!--<div id="p5" class="contentBlock">-->
+          <!--<p>-->
 
-          </p>
+          <!--</p>-->
 
-        </div> <!-- contentBlock -->
-        <div class="contentBlock">
-          <p id="p6">
+        <!--</div> &lt;!&ndash; contentBlock &ndash;&gt;-->
+        <!--<div class="contentBlock">-->
+          <!--<p id="p6">-->
 
-          </p>
+          <!--</p>-->
 
-        </div> <!-- contentBlock -->
-        <div class="contentBlock">
-          <p id="p7">
-            <br>
-          </p>
-        </div> <!-- contentBlock -->
+        <!--</div> &lt;!&ndash; contentBlock &ndash;&gt;-->
+        <!--<div class="contentBlock">-->
+          <!--<p id="p7">-->
+            <!--<br>-->
+          <!--</p>-->
+        <!--</div> &lt;!&ndash; contentBlock &ndash;&gt;-->
 
 
         <!-- ************** Où NOUS TROUVER *********** -->
@@ -312,14 +312,14 @@
           </div>
           <div class="modal-content">
             <!--Your modal content goes here-->
-              <a href="mailto:fsimitchiev@gmail.com"><h3>Contactez-nous !</h3></a><br>
+              <h3>Contactez-nous !</h3><br>
               <h4>Mariage, anniversaire, brunch, soirée privée</h4>
               <p>
                 Parce que toutes les occasions sont bonnes pour se réunir,<br>
                   marquez les esprits de vos invités en privatisant le Kemptown Food Truck<br>
                   et faites de votre événement un moment unique.
                   <br><br>
-                  Contactez-nous, nous répondrons à toutes vos questions !
+                  <a href="mailto:fsimitchiev@gmail.com">Contactez-nous, nous répondrons à toutes vos questions !</a>
               </p>
 
               <!--********** CONTACT FORM ************-->
