submit to client

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
           <p id="p3">
             Nos fish’n’chips et burgers sont fabriqués à partir d’ingrédients frais, de saison et de qualité,
             que nous avons sélectionnés parmi les meilleurs producteurs lyonnais.
-            Notre viande provientde la boucherie« Jolivet »(CroixRousse), nos buns etpains
-            à hot dog sontfaçonnés par« le Boulanger de la Croix Rousse
+            Notre viande provient de la boucherie« Jolivet »(CroixRousse), nos buns et pains
+            à hot dog sont façonnés par« le Boulanger de la Croix Rousse
             by Victor ».<br>
           </p>
 
@@ -147,7 +147,7 @@
         <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID  class="close-animatedModal" -->
           <div class="close-animatedModal">
             <!--<i class="fa fa-times-circle" aria-hidden="true"></i>-->
-              <img class="closeBtn imgSwap" src="dist/img/static-x-color.png" data-alt-src="dist/img/animat-x-color.gif">
+              <img id="planningClose" class="closeBtn imgSwap" src="dist/img/static-x.png" data-alt-src="dist/img/animat-x.gif">
           </div>
           <div class="modal-content">
 
@@ -325,7 +325,8 @@
                   marquez les esprits de vos invités en privatisant le Kemptown Food Truck<br>
                   et faites de votre événement un moment unique.
                   <br><br>
-                  <a href="mailto:fsimitchiev@gmail.com">Contactez-nous, nous répondrons à toutes vos questions !</a>
+                  <a href="mailto:fsimitchiev@gmail.com">Contactez-nous, nous répondrons à toutes vos questions !
+                  contact@kemptownfoodtruck.com</a>
               </p>
 
               <!--********** CONTACT FORM ************-->
